popups added with script

--- a/app/front/staff/reservations_staff.html
+++ b/app/front/staff/reservations_staff.html
@@ -180,5 +180,6 @@
 <button class="fixed bottom-6 right-6 bg-primary text-gray-900 w-14 h-14 rounded-full flex items-center justify-center shadow-lg hover:bg-primary/90 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary">
 <span class="material-symbols-outlined" style="font-size: 28px;">accessibility_new</span>
 </button>
+<script src="../popup.js"></script>
 </body></html>
 
