--- a/app/front/staff/today_task.html
+++ b/app/front/staff/today_task.html
@@ -142,4 +142,5 @@
 <button aria-label="Open Accessibility Menu" class="fixed bottom-5 right-5 z-50 flex h-14 w-14 items-center justify-center rounded-full bg-accent text-white shadow-lg transition-transform hover:scale-105">
 <span class="material-symbols-outlined text-3xl">accessibility_new</span>
 </button>
+<script src="../popup.js"></script>
 </body></html>
