--- a/app/front/manager/dashboard_with_stock_alert.html
+++ b/app/front/manager/dashboard_with_stock_alert.html
@@ -129,4 +129,5 @@
 <span class="material-symbols-outlined !text-3xl">accessibility_new</span>
 </button>
 </div>
+<script src="../popup.js"></script>
 </body></html>
