--- a/app/front/manager/edit_reservation_details.html
+++ b/app/front/manager/edit_reservation_details.html
@@ -138,4 +138,5 @@
 <span class="material-symbols-outlined text-3xl text-black">accessibility_new</span>
 </button>
 </div>
+<script src="../popup.js"></script>
 </body></html>
