--- a/app/front/staff/live_orders.html
+++ b/app/front/staff/live_orders.html
@@ -43,6 +43,10 @@
 <span class="material-symbols-outlined">checklist</span>
 <p class="text-sm font-medium leading-normal">Tasks</p>
 </a>
+<a class="flex items-center gap-3 px-3 py-2 text-white/70 hover:text-white hover:bg-[#282e39] rounded-lg transition-colors" href="/staff/staff_checkin">
+<span class="material-symbols-outlined">how_to_reg</span>
+<p class="text-sm font-medium leading-normal">Check-in/Check-out</p>
+</a>
 </nav>
 </div>
 <div class="mt-auto flex flex-col gap-1">
@@ -271,3 +275,4 @@
 })();
 </script>
 </body></html>
+
