--- a/app/front/staff/reservations_staff.html
+++ b/app/front/staff/reservations_staff.html
@@ -30,7 +30,7 @@
 </div>
 </div>
 <nav class="flex flex-col gap-2 mt-4">
-<a class="flex items-center gap-3 px-3 py-2 rounded-lg bg-primary text-gray-900" href="#">
+<a class="flex items-center gap-3 px-3 py-2 rounded-lg bg-primary text-gray-900" href="/staff/reservations">
 <span class="material-symbols-outlined">calendar_month</span>
 <p class="text-sm font-medium leading-normal">Reservations</p>
 </a>
@@ -38,15 +38,15 @@
 <span data-not-implemented class="material-symbols-outlined">table_restaurant</span>
 <p class="text-sm font-medium leading-normal">Tables</p>
 </a>
-<a class="flex items-center gap-3 px-3 py-2 text-gray-600 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white hover:bg-gray-100 dark:hover:bg-gray-800 rounded-lg transition-colors" href="#">
+<a class="flex items-center gap-3 px-3 py-2 text-gray-600 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white hover:bg-gray-100 dark:hover:bg-gray-800 rounded-lg transition-colors" href="/staff/live">
 <span class="material-symbols-outlined">receipt_long</span>
 <p class="text-sm font-medium leading-normal">Orders</p>
 </a>
-<a class="flex items-center gap-3 px-3 py-2 text-gray-600 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white hover:bg-gray-100 dark:hover:bg-gray-800 rounded-lg transition-colors" href="#">
+<a class="flex items-center gap-3 px-3 py-2 text-gray-600 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white hover:bg-gray-100 dark:hover:bg-gray-800 rounded-lg transition-colors" href="/staff/task">
 <span class="material-symbols-outlined">task_alt</span>
 <p class="text-sm font-medium leading-normal">Tasks</p>
 </a>
-<a class="flex items-center gap-3 px-3 py-2 text-gray-600 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white hover:bg-gray-100 dark:hover:bg-gray-800 rounded-lg transition-colors" href="#">
+<a class="flex items-center gap-3 px-3 py-2 text-gray-600 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white hover:bg-gray-100 dark:hover:bg-gray-800 rounded-lg transition-colors" href="/staff/staff_checkin">
 <span class="material-symbols-outlined">how_to_reg</span>
 <p class="text-sm font-medium leading-normal">Check-in/Check-out</p>
 </a>
