--- a/app/front/staff/today_task.html
+++ b/app/front/staff/today_task.html
@@ -65,6 +65,10 @@
 <span class="material-symbols-outlined">checklist</span>
 <p class="text-sm font-medium leading-normal">Tasks</p>
 </a>
+<a class="flex items-center gap-3 px-3 py-2 text-white/70 hover:text-white hover:bg-[#282e39] rounded-lg transition-colors" href="/staff/staff_checkin">
+<span class="material-symbols-outlined">how_to_reg</span>
+<p class="text-sm font-medium leading-normal">Check-in/Check-out</p>
+</a>
 </nav>
 <div class="mt-auto p-4">
 <button aria-label="User Profile" class="flex w-full items-center gap-3 rounded-lg p-3 text-left text-gray-600 transition-all hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-black/20">
