Logout is fixed

--- a/app/front/staff/reservations_staff.html
+++ b/app/front/staff/reservations_staff.html
@@ -57,7 +57,7 @@
 <span data-not-implemented class="material-symbols-outlined">help</span>
 <p class="text-sm font-medium leading-normal">Help</p>
 </a>
-<a class="flex items-center gap-3 px-3 py-2 text-gray-600 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white hover:bg-gray-100 dark:hover:bg-gray-800 rounded-lg transition-colors" href="#">
+<a class="flex items-center gap-3 px-3 py-2 text-gray-600 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white hover:bg-gray-100 dark:hover:bg-gray-800 rounded-lg transition-colors" href="/logout">
 <span class="material-symbols-outlined">logout</span>
 <p class="text-sm font-medium leading-normal">Logout</p>
 </a>
