fixed staff sidebar, added other popups and deleted things noot needed

--- a/app/front/staff/live_orders.html
+++ b/app/front/staff/live_orders.html
@@ -26,18 +26,20 @@ font-family: 'Work Sans', sans-serif;
       </div>
     </div>
     <nav class="flex flex-col gap-2 mt-4">
-      <a class="flex items-center gap-3 px-3 py-2 rounded-lg bg-primary text-gray-900" href="/staff/live">
-        <span class="material-symbols-outlined">receipt_long</span>
-        <p class="text-sm font-medium leading-normal">Orders</p>
-      </a>
       <a class="flex items-center gap-3 px-3 py-2 text-gray-600 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white hover:bg-gray-100 dark:hover:bg-gray-800 rounded-lg transition-colors" href="/staff/reservations">
         <span class="material-symbols-outlined">calendar_month</span>
         <p class="text-sm font-medium leading-normal">Reservations</p>
       </a>
-      <a class="flex items-center gap-3 px-3 py-2 text-gray-600 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white hover:bg-gray-100 dark:hover:bg-gray-800 rounded-lg transition-colors" href="#">
+      <a data-not-implemented class="flex items-center gap-3 px-3 py-2 text-gray-600 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white hover:bg-gray-100 dark:hover:bg-gray-800 rounded-lg transition-colors" href="#">
         <span data-not-implemented class="material-symbols-outlined">table_restaurant</span>
         <p class="text-sm font-medium leading-normal">Tables</p>
       </a>
+      <a class="flex items-center gap-3 px-3 py-2 rounded-lg bg-primary text-gray-900" href="/staff/live">
+        <span class="material-symbols-outlined">receipt_long</span>
+        <p class="text-sm font-medium leading-normal">Orders</p>
+      </a>
+      
+      
       <a class="flex items-center gap-3 px-3 py-2 text-gray-600 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white hover:bg-gray-100 dark:hover:bg-gray-800 rounded-lg transition-colors" href="/staff/task">
         <span class="material-symbols-outlined">task_alt</span>
         <p class="text-sm font-medium leading-normal">Tasks</p>
@@ -49,7 +51,7 @@ font-family: 'Work Sans', sans-serif;
     </nav>
   </div>
   <div class="mt-auto flex flex-col gap-2">
-    <a class="flex items-center gap-3 px-3 py-2 text-gray-600 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white hover:bg-gray-100 dark:hover:bg-gray-800 rounded-lg transition-colors" href="#">
+    <a data-not-implemented class="flex items-center gap-3 px-3 py-2 text-gray-600 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white hover:bg-gray-100 dark:hover:bg-gray-800 rounded-lg transition-colors" href="#">
       <span data-not-implemented class="material-symbols-outlined">help</span>
       <p class="text-sm font-medium leading-normal">Help</p>
     </a>
@@ -167,10 +169,10 @@ font-family: 'Work Sans', sans-serif;
 </div>
 </div>
 <div class="mt-6 flex flex-col gap-3 border-t border-gray-200 pt-6 dark:border-gray-700">
-<button class="flex h-12 w-full cursor-pointer items-center justify-center overflow-hidden rounded-lg bg-primary px-5 text-base font-bold leading-normal tracking-[0.015em] text-background-dark ring-offset-2 ring-offset-background-light focus:outline-none focus:ring-2 focus:ring-primary dark:ring-offset-background-dark">
+<button data-not-implemented class="flex h-12 w-full cursor-pointer items-center justify-center overflow-hidden rounded-lg bg-primary px-5 text-base font-bold leading-normal tracking-[0.015em] text-background-dark ring-offset-2 ring-offset-background-light focus:outline-none focus:ring-2 focus:ring-primary dark:ring-offset-background-dark">
                         Update Status
 </button>
-<button class="flex h-12 w-full cursor-pointer items-center justify-center overflow-hidden rounded-lg border border-gray-300 bg-transparent px-5 text-base font-bold leading-normal tracking-[0.015em] text-gray-700 hover:bg-gray-100 ring-offset-2 ring-offset-background-light focus:outline-none focus:ring-2 focus:ring-primary dark:border-gray-600 dark:text-gray-200 dark:hover:bg-white/10 dark:ring-offset-background-dark">
+<button data-not-implemented class="flex h-12 w-full cursor-pointer items-center justify-center overflow-hidden rounded-lg border border-gray-300 bg-transparent px-5 text-base font-bold leading-normal tracking-[0.015em] text-gray-700 hover:bg-gray-100 ring-offset-2 ring-offset-background-light focus:outline-none focus:ring-2 focus:ring-primary dark:border-gray-600 dark:text-gray-200 dark:hover:bg-white/10 dark:ring-offset-background-dark">
                         Print Receipt
 </button>
 </div>
