--- a/app/front/staff/reservations_staff.html
+++ b/app/front/staff/reservations_staff.html
@@ -34,7 +34,7 @@
 <span class="material-symbols-outlined">calendar_month</span>
 <p class="text-sm font-medium leading-normal">Reservations</p>
 </a>
-<a class="flex items-center gap-3 px-3 py-2 text-gray-600 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white hover:bg-gray-100 dark:hover:bg-gray-800 rounded-lg transition-colors" href="#">
+<a data-not-implemented class="flex items-center gap-3 px-3 py-2 text-gray-600 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white hover:bg-gray-100 dark:hover:bg-gray-800 rounded-lg transition-colors" href="#">
 <span data-not-implemented class="material-symbols-outlined">table_restaurant</span>
 <p class="text-sm font-medium leading-normal">Tables</p>
 </a>
@@ -54,8 +54,8 @@
 </div>
 <div class="mt-auto flex flex-col gap-2">
 <a class="flex items-center gap-3 px-3 py-2 text-gray-600 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white hover:bg-gray-100 dark:hover:bg-gray-800 rounded-lg transition-colors" href="#">
-<span data-not-implemented class="material-symbols-outlined">help</span>
-<p class="text-sm font-medium leading-normal">Help</p>
+<span class="material-symbols-outlined">help</span>
+<p data-not-implemented class="text-sm font-medium leading-normal">Help</p>
 </a>
 <a class="flex items-center gap-3 px-3 py-2 text-gray-600 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white hover:bg-gray-100 dark:hover:bg-gray-800 rounded-lg transition-colors" href="/logout">
 <span class="material-symbols-outlined">logout</span>
@@ -71,10 +71,6 @@
 <p class="text-gray-500 dark:text-gray-400 mt-1">Today, October 26</p>
 </div>
 <div class="flex items-center gap-4">
-<button class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center gap-2 overflow-hidden rounded-lg h-10 px-4 bg-primary text-gray-900 text-sm font-bold leading-normal tracking-[0.015em] hover:bg-primary/90 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary">
-<span class="material-symbols-outlined" style="font-size: 20px;">add</span>
-<span class="truncate">New Reservation</span>
-</button>
 </div>
 </header>
 <div class="flex flex-wrap items-center justify-between gap-4 mb-4 p-4 bg-white dark:bg-gray-800 rounded-xl border border-gray-200 dark:border-gray-700">
@@ -102,7 +98,6 @@
 <th class="px-6 py-4 text-left font-medium text-gray-500 dark:text-gray-400 tracking-wider">Customer Name</th>
 <th class="px-6 py-4 text-left font-medium text-gray-500 dark:text-gray-400 tracking-wider">Time</th>
 <th class="px-6 py-4 text-left font-medium text-gray-500 dark:text-gray-400 tracking-wider">Guests</th>
-<th class="px-6 py-4 text-left font-medium text-gray-500 dark:text-gray-400 tracking-wider">Table #</th>
 <th class="px-6 py-4 text-left font-medium text-gray-500 dark:text-gray-400 tracking-wider">Status</th>
 <th class="px-6 py-4 text-left font-medium text-gray-500 dark:text-gray-400 tracking-wider">Actions</th>
 </tr>
