--- a/app/front/staff/today_task.html
+++ b/app/front/staff/today_task.html
@@ -77,8 +77,8 @@
   </div>
   <div class="mt-auto flex flex-col gap-2">
     <a class="flex items-center gap-3 px-3 py-2 text-gray-600 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white hover:bg-gray-100 dark:hover:bg-gray-800 rounded-lg transition-colors" href="#">
-      <span data-not-implemented class="material-symbols-outlined">help</span>
-      <p class="text-sm font-medium leading-normal">Help</p>
+      <span class="material-symbols-outlined">help</span>
+      <p data-not-implemented class="text-sm font-medium leading-normal">Help</p>
     </a>
     <a class="flex items-center gap-3 px-3 py-2 text-gray-600 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white hover:bg-gray-100 dark:hover:bg-gray-800 rounded-lg transition-colors" href="/logout">
       <span class="material-symbols-outlined">logout</span>
@@ -90,7 +90,7 @@
 <header class="flex h-16 shrink-0 items-center justify-between border-b border-solid border-black/10 bg-white dark:border-white/10 dark:bg-background-dark px-6">
 <h2 class="text-lg font-semibold text-gray-600 dark:text-gray-300">Task List View</h2>
 <div class="flex items-center gap-4">
-<button aria-label="Notifications" class="relative">
+<button data-not-implemented aria-label="Notifications" class="relative">
 <span class="material-symbols-outlined text-2xl text-gray-600 dark:text-gray-300">notifications</span>
 <span class="absolute -right-1 -top-1 flex h-4 w-4 items-center justify-center rounded-full bg-accent text-xs font-bold text-white">2</span>
 </button>
