--- a/app/front/manager/sales_reports_page.html
+++ b/app/front/manager/sales_reports_page.html
@@ -20,48 +20,44 @@
 </head>
 <body class="font-display bg-background-light dark:bg-background-dark">
 <div class="flex min-h-screen w-full">
-<aside class="flex w-64 flex-col bg-white/50 dark:bg-background-dark/50 p-4 border-r border-slate-200 dark:border-slate-800">
-<div class="flex flex-col gap-4">
-<div class="flex items-center gap-3">
-<div class="bg-center bg-no-repeat aspect-square bg-cover rounded-full size-10" data-alt="Cheesy Dreams restaurant logo" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuDCOQrcYhAWJGJpV68zdwtkAp32btY0yA-rTMZgIh5DF0RHAYh0Os57VtpHyvnaRrc5EbA9i0uOg_TAI5cxrpJtzEfyne14g_kHRcwR1K__nLGj5z1N3wQ_Da5SiBIN-gV1Dh9L00lPEs_gtDa9VKmJr1ARwXgexpILDMnHCGMSPjtP8WqrxVbm0ULLyzWgU7aB7z5VgPgYmKfud-MgfIlDLzH0u7FK9T1BQ8rpHVkIn__1BvoPvk98HK0QMJxN0fWqVAt5DvCPMcs");'></div>
-<div class="flex flex-col">
-<h1 class="text-slate-900 dark:text-white text-base font-medium leading-normal">Cheesy Dreams</h1>
-<p class="text-slate-500 dark:text-slate-400 text-sm font-normal leading-normal">Restaurant Admin</p>
-</div>
-</div>
-<nav class="flex flex-col gap-2 mt-4">
-<a class="flex items-center gap-3 px-3 py-2 text-slate-700 dark:text-slate-300 hover:bg-primary/10 rounded" href="#">
-<span class="material-symbols-outlined">dashboard</span>
-<p class="text-sm font-medium leading-normal">Dashboard</p>
-</a>
-<a class="flex items-center gap-3 px-3 py-2 rounded bg-primary text-white" href="#">
-<span class="material-symbols-outlined">bar_chart</span>
-<p class="text-sm font-medium leading-normal">Sales Reports</p>
-</a>
-<a class="flex items-center gap-3 px-3 py-2 text-slate-700 dark:text-slate-300 hover:bg-primary/10 rounded" href="#">
-<span class="material-symbols-outlined">restaurant_menu</span>
-<p class="text-sm font-medium leading-normal">Menu Management</p>
-</a>
-<a class="flex items-center gap-3 px-3 py-2 text-slate-700 dark:text-slate-300 hover:bg-primary/10 rounded" href="#">
-<span class="material-symbols-outlined">inventory_2</span>
-<p class="text-sm font-medium leading-normal">Inventory</p>
-</a>
-<a class="flex items-center gap-3 px-3 py-2 text-slate-700 dark:text-slate-300 hover:bg-primary/10 rounded" href="#">
-<span class="material-symbols-outlined">settings</span>
-<p class="text-sm font-medium leading-normal">Settings</p>
-</a>
-</nav>
-</div>
-<div class="mt-auto flex flex-col gap-1">
-<a class="flex items-center gap-3 px-3 py-2 text-slate-700 dark:text-slate-300 hover:bg-primary/10 rounded" href="#">
-<span class="material-symbols-outlined">account_circle</span>
-<p class="text-sm font-medium leading-normal">Profile</p>
-</a>
-<a class="flex items-center gap-3 px-3 py-2 text-slate-700 dark:text-slate-300 hover:bg-primary/10 rounded" href="#">
-<span class="material-symbols-outlined">logout</span>
-<p class="text-sm font-medium leading-normal">Logout</p>
-</a>
-</div>
+<aside class="flex h-screen w-64 flex-col bg-white dark:bg-gray-900 p-4 sticky top-0 border-r border-gray-200 dark:border-gray-700">
+  <div class="flex flex-col gap-4">
+    <div class="flex items-center gap-3 px-3 py-2">
+      <div class="bg-center bg-no-repeat aspect-square bg-cover rounded-full size-10" data-alt="Cheesy Dreams logo" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuACWG7apcDQDYvNEqsji_QXxNXAAHmsavK3M2grSSmAsuCbB8QH6m8V97WY1Qo3PkFnSbd4ZdQ8omPhJNiTkN0T_Yj36jbtKZrNrmx2BAlUzJLMIOSZlvulEkHxiVK46Dz8kxMoiR5y3X-GdmFlLRh2h3nWCNPi7FlMCz3jMmbHSASdtzuykd7r0YKMrMuZJRx43-0rS5JIhKA1NGR2PUOnktpFXcC1z7I4DpPGQJhwT8fu84IMlKksjcm2qsGLxbL7iAgq-m-P4WI");'></div>
+      <div class="flex flex-col">
+        <h1 class="text-gray-900 dark:text-white text-base font-medium leading-normal">Cheesy Dreams</h1>
+        <p class="text-gray-500 dark:text-gray-400 text-sm font-normal leading-normal">Management System</p>
+      </div>
+    </div>
+    <nav class="flex flex-col gap-2 mt-4">
+      <a class="flex items-center gap-3 px-3 py-2 text-gray-600 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white hover:bg-gray-100 dark:hover:bg-gray-800 rounded-lg transition-colors" href="/manager/dashboard">
+        <span class="material-symbols-outlined">dashboard</span>
+        <p class="text-sm font-medium leading-normal">Dashboard</p>
+      </a>
+      <a class="flex items-center gap-3 px-3 py-2 text-gray-600 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white hover:bg-gray-100 dark:hover:bg-gray-800 rounded-lg transition-colors" href="/manager/manage_reservations">
+        <span class="material-symbols-outlined">book_online</span>
+        <p class="text-sm font-medium leading-normal">Reservations</p>
+      </a>
+      <a class="flex items-center gap-3 px-3 py-2 text-gray-600 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white hover:bg-gray-100 dark:hover:bg-gray-800 rounded-lg transition-colors" href="/manager/inventory">
+        <span class="material-symbols-outlined">inventory_2</span>
+        <p class="text-sm font-medium leading-normal">Inventory</p>
+      </a>
+      <a class="flex items-center gap-3 px-3 py-2 rounded-lg bg-primary text-gray-900" href="/manager/sales">
+        <span class="material-symbols-outlined">assessment</span>
+        <p class="text-sm font-medium leading-normal">Sales Reports</p>
+      </a>
+    </nav>
+  </div>
+  <div class="mt-auto flex flex-col gap-2">
+    <a class="flex items-center gap-3 px-3 py-2 text-gray-600 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white hover:bg-gray-100 dark:hover:bg-gray-800 rounded-lg transition-colors" href="#" data-not-implemented>
+      <span class="material-symbols-outlined">settings</span>
+      <p class="text-sm font-medium leading-normal">Settings</p>
+    </a>
+    <a class="flex items-center gap-3 px-3 py-2 text-gray-600 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white hover:bg-gray-100 dark:hover:bg-gray-800 rounded-lg transition-colors" href="#" data-not-implemented>
+      <span class="material-symbols-outlined">logout</span>
+      <p class="text-sm font-medium leading-normal">Log Out</p>
+    </a>
+  </div>
 </aside>
 <main class="flex-1 overflow-y-auto">
 <div class="p-8">
@@ -71,7 +67,7 @@
 <p class="text-slate-500 dark:text-slate-400 text-base font-normal leading-normal">Key sales metrics for today.</p>
 </div>
 <div class="flex items-center gap-2">
-<button class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 px-4 bg-slate-200 dark:bg-slate-800 text-slate-700 dark:text-slate-300 hover:bg-slate-300 dark:hover:bg-slate-700 text-sm font-bold leading-normal tracking-[0.015em] focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary">
+<button class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 px-4 bg-slate-200 dark:bg-slate-800 text-slate-700 dark:text-slate-300 hover:bg-slate-300 dark:hover:bg-slate-700 text-sm font-bold leading-normal tracking-[0.015em] focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary" data-not-implemented>
 <span class="material-symbols-outlined mr-2">calendar_today</span>
 <span class="truncate">Oct 26, 2023</span>
 </button>
@@ -145,27 +141,7 @@
 </section>
 </div>
 </main>
-<div class="fixed bottom-5 right-5 flex flex-col items-end gap-3">
-<div class="flex items-center gap-2 p-2 bg-white dark:bg-slate-800 rounded-full border border-slate-200 dark:border-slate-700 shadow-lg">
-<a aria-label="Dashboard" class="flex flex-col items-center justify-center p-2 rounded-full hover:bg-slate-100 dark:hover:bg-slate-700 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary w-24" href="#">
-<span class="material-symbols-outlined text-slate-600 dark:text-slate-300">dashboard</span>
-<span class="text-xs font-medium text-slate-600 dark:text-slate-300">Dashboard</span>
-</a>
-<a aria-label="Inventory Management" class="flex flex-col items-center justify-center p-2 rounded-full hover:bg-slate-100 dark:hover:bg-slate-700 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary w-24" href="#">
-<span class="material-symbols-outlined text-slate-600 dark:text-slate-300">inventory_2</span>
-<span class="text-xs font-medium text-slate-600 dark:text-slate-300 text-center">Inventory</span>
-</a>
-<a aria-current="page" aria-label="Sales Reports" class="flex flex-col items-center justify-center p-2 rounded-full bg-primary/10 dark:bg-primary/20 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary w-24" href="#">
-<span class="material-symbols-outlined text-primary dark:text-white">bar_chart</span>
-<span class="text-xs font-medium text-primary dark:text-white">Sales</span>
-</a>
 </div>
-<button class="w-14 h-14 rounded-full bg-primary text-white flex items-center justify-center shadow-lg hover:bg-primary/90 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary">
-<span class="material-symbols-outlined text-3xl">accessibility_new</span>
-</button>
-</div>
-</div>
-
 
 
 <script>
@@ -260,3 +236,4 @@
 })();
 </script>
 </body></html>
+
